Composer: Removed Yii Installer reference
See https://github.com/yiisoft/yii/issues/2313 for more details why.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "denits/yii-apiauth",
-    "type": "yii-extension",
+    "type": "libary",
     "license": "New BSD License",
 	"description": "HTTP authentication for automated requests",
     "keywords": ["yii","authentication","basic","digest"],
@@ -14,6 +14,5 @@
     ],
     "require": {
         "php": ">=5.3.16",
-        "composer/installers": "~1.0"
     }
 }
